--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module 2</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Coursera its great time</h1>
+	<h1> Our Menu </h1>
+	<div class="row">
+		<section class="sec-lg-4 sec-md-6 sec-sm-12">
+			<div class="title pink">Chicken</div>
+				<p>
+			 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat neque ac eros vestibulum congue. Suspendisse urna nisl, aliquam quis scelerisque eget, volutpat ut nisl. In id hendrerit leo. Morbi ac urna leo. Phasellus ut consequat ipsum.
+				</p>
+		</section>
+		<section class="sec-lg-4 sec-md-6 sec-sm-12">
+			<div class="title red">Beef</div>
+				<p>
+			 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat neque ac eros vestibulum congue. Suspendisse urna nisl, aliquam quis scelerisque eget, volutpat ut nisl. In id hendrerit leo. Morbi ac urna leo. Phasellus ut consequat ipsum.
+				</p>
+		</section>
+		<section class="sec-lg-4 sec-md-12 sec-sm-12">
+			<div class="title gold">Sushi</div>
+				<p>
+			 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat neque ac eros vestibulum congue. Suspendisse urna nisl, aliquam quis scelerisque eget, volutpat ut nisl. In id hendrerit leo. Morbi ac urna leo. Phasellus ut consequat ipsum.
+				</p>
+		</section>
+	</div>
 </body>
 </html>
